Fix overflow content, Add sponsors content

--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,9 @@ a {
 }
 
 .wrapper {
-    max-width: 1280px;
-    margin: 0 5rem;
+    max-width: 1120px;
+    margin: 0 auto;
+    overflow-x: hidden;
 }
 
 .grid {
@@ -23,4 +24,8 @@ a {
 
 main {
     margin: 0 5rem;
+}
+
+section {
+    padding: 4rem 0;
 }
